# LinuxApplicationDevelopment2023

./: README.md
01_TerminalProject/: Makefile  Show.c
02_Multifile/: .gitignore  Makefile  fun.c  prog.c
03_Text/: randomize.sh
04_Debugging/: .gitignore  Makefile  range.c  ref1.txt  ref2.txt  test1.gdb  test2.gdb
05_Regexps/: .gitignore  Makefile  esub.c
06_TracingFencing/: .gitignore  Makefile  libprotect.c  move.c  test.sh
07_Environmental/: .gitignore  Makefile.am  README.md  configure.ac  rhasher.c  runtest.sh
08_I18n/: .gitignore  Makefile.am  configure.ac
08_I18n/po/: ru.po
08_I18n/src/: Makefile.am  guess.c
09_PatchDiff/: .gitignore  0001-PatchDiff-Configurable-size.patch  0002-PatchDiff-Configurable-wall-and-empty-space-chars.patch  0003-PatchDiff-Configurable-random-number-generator-seed.patch  Makefile  maze-v0.c
11_Documenting/: .gitignore  Doxyfile.in  Makefile.am  README.md  configure.ac
11_Documenting/po/: ru.po
11_Documenting/src/: Makefile.am  guess.c
