AM_CFLAGS = -std=c99 -Wall -Wextra
bin_PROGRAMS = rhasher
rhasher_SOURCES = rhasher.c

test:
	@./runtest.sh

clean:
	rm -rf *.o rhasher configure configure~ Makefile COPYING INSTALL autom4te.cache Makefile.in aclocal.m4 config.h* config.log config.status install-sh missing stamp-h1 .deps depcomp compile autoscan.log test
